# DjangoCountries

./: .env.example  .gitignore.example  README.md  pyproject.toml  requirements.txt
DjangoCountries/: settings.py  urls.py
countries/: models.py  urls.py  views.py
countries/management/commands/: import_countries.py  import_countries_languages.py
templates/: base.html  countries-by-lang.html  countries-by-letter.html  countries-list.html  country-detail.html  index.html  languages.html
templates/includes/: navbar.html  paginator.html  sort-by-letters.html
