[tool.poetry]
name = "djangocountries"
version = "0.1.0"
description = ""
authors = ["maxx <maxpetrikin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.4"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
